--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,20 +3,27 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - TPXX - Apellido</title>
-        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        <title>@ViewData["Title"] AXEL UP</title>
+                <script src="https://kit.fontawesome.com/70a6c089f6.js" crossorigin="anonymous"></script>
+                <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+            <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     </head>
-    <body>
-        <header style="position:fixed; top: 0; margin: 10px 0px 20px 0px;">
-            Encabezado TP XX
-        </header>
-        <div style="padding:20px 10px 0px 10px;">
+    <body class="layout">
+
+        <aside class="aside">
+            <a href='@Url.Action("Index")'><img src="~/img/LogoAxel.png" class="aside__logo"></a>
+            <div class="puntaje">15</div>
+            <div class="volumen">
+            <i class="fa-solid fa-volume-high"></i>
+            <div class="barra"></div>
+            </div>
+        </aside>
+
+        <div class="juego">
             @RenderBody()
         </div>
 
-        <footer>
-                &copy; @DateTime.Now.Year - Taller de Programación - TPXX
-        </footer>
+
         <script src="~/js/site.js" asp-append-version="true"></script>
         @await RenderSectionAsync("Scripts", required: false)
     </body>
