--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,20 +9,25 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>@ViewData["Title"] - TPXX - Apellido</title>
-        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+          <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+            />
+        <script src="https://kit.fontawesome.com/70a6c089f6.js" crossorigin="anonymous"></script>        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     </head>
     <body>
         <div class="inicio">
-            <img src="logo" alt="Axel Up">
+            <img src="~/img/LogoAxel.png" alt="Axel Up" class="inicio__logo animate__heartBeat animate__repeat-2">
 
             <div class="inicio__botones">
-                <a href='@Url.Action("")'><button class="inicio__comenzar">COMENZAR</button></a>
+                    <a href='@Url.Action("")'><button class="inicio__comenzar">COMENZAR</button></a>
                 <a href='@Url.Action("")'><button class="inicio__puntaje">PUNTAJES</button></a>
             </div>
         </div>
-        <script src="~/js/site.js" asp-append-version="true"></script>
         @* @await RenderSectionAsync("Scripts", required: false) *@
     </body>
+        <a href='@Url.Action("Configuracion")'><i class="fa-solid fa-gear configuracion"></i></a>
+        <script src="~/js/site.js" asp-append-version="true"></script>
 </html>
 
 
