--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,3 +1,5 @@
+
+
 :root{
   --rosa-2: #ff00ff;
   --rosa-1: #ff66c4;
@@ -9,16 +11,94 @@
   --verde: #06D6A0;
   --amarillo: #FFD166;
   --rosa3: #FFC8DD;
+  --shadow-botones:inset 5px 5px 5px #0004;
+
 }
 
 html {
   font-size: 62.5%;
 }
 
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body{
+  background-color: var(--negro);
+  overflow-x: hidden;
+  position: relative;
+}
+
+
+.layout{
+  display: flex;
+  margin-top: 5rem;
+  margin-right: 5rem;
+  height: 90vh;
+}
+
+.juego{
+  background-color: var(--rosa3);
+  width: 100%;
+}
+
+.aside{
+  display: flex;
+  margin-top: 4rem;
+  flex-direction: column;
+  width: 12%;
+  height: 70vh;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.aside__logo{
+  width: 80%;
+}
+
+.puntaje{
+  background-color: var(--amarillo);
+  color: var(--negro);
+  padding: 1rem 25%;
+  font-weight: bold;
+  font-size: 2.5rem;
+  box-shadow: var(--shadow-botones);
+  border-radius: 10px;
+}
+
+.volumen{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.fa-volume-high{
+  color: var(--rosa-2);
+  font-size: 4rem;
+  margin-bottom: 2rem;
+}
+
+.barra{
+  height: 16rem;
+  width: 1rem;
+  background-color: var(--rosa3);
+  border-radius: 10px;
+
+}
+
+
+
+.configuracion{
+  color: var(--rosa3);
+  position: absolute;
+  top: 5rem;
+  right: 5rem;
+  font-size: 7rem;
 }
 
 .inicio{
@@ -27,7 +107,12 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+}
+
+.inicio__logo{
+  width: 30%;
+  height: auto;
 }
 
 .inicio__botones{
@@ -36,15 +121,23 @@ html {
   text-align: center;
 }
 
+
 .inicio__comenzar{
   width: 80rem;
   height: 8rem;
   font-size: 4rem;
   margin-bottom: 5rem;
+  background-color: var(--violeta2);
+  border-radius: 10px;
+  box-shadow: var(--shadow-botones);
+
 }
 
 .inicio__puntaje{
   width: 60rem;
   height: 6rem;
   font-size: 3rem;
+  background-color: var(--violeta);
+  border-radius: 10px;
+  box-shadow: var(--shadow-botones);
 }
