--- a/Views/Home/Configuracion.cshtml
+++ b/Views/Home/Configuracion.cshtml
@@ -1,3 +1,33 @@
-<div>
-asasas
+
+<div class="config">
+    <div class="config__dificultad">
+        <h2 class="config__titulo">Dificultad</h2>
+        <div class="config__botones">
+            <button class="config__boton" id="config__boton--facil">Facil</button>
+            <button class="config__boton" id="config__boton--normal">Normal</button>
+            <button class="config__boton" id="config__boton--dificil">Dificil</button>
+            <button class="config__boton" id="config__boton--random">Random</button>
+        </div>
+    </div>
+    <div class="config__categoria">
+        <h2 class="config__titulo">Categoria</h2>
+        <div class="config__botones">
+            @foreach (Categoria c in ViewBag.categorias)
+            {   
+                <button class="config__boton" id="config__boton--">holaaa</button>
+            }
+            
+        </div>
+    </div>
+    <div class="config__volumen">
+        <h2 class="config__titulo">Volumen</h2>
+        <i class="fa-solid fa-volume-high"></i>
+    </div>
+    <div class="config__timer">
+        <h2 class="config__titulo">Timer</h2>
+        <div class="config__botones-timer">
+            <button class="config__boton-timer" id="config__boton-timer-on" disabled>ON</button>
+            <button class="config__boton-timer" id="config__boton-timer-off">OFF</button>
+        </div>
+    </div>
 </div>
