--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Tera:wght@300;400;500;600&display=swap');
 
 :root{
   --rosa-2: #ff00ff;
@@ -30,6 +30,7 @@ body{
   background-color: var(--negro);
   overflow-x: hidden;
   position: relative;
+  font-family: 'Lexend Tera', sans-serif;
 }
 
 
@@ -140,4 +141,92 @@ body{
   background-color: var(--violeta);
   border-radius: 10px;
   box-shadow: var(--shadow-botones);
+}
+
+.config{
+  padding:1% 3%;
+}
+
+.config__dificultad{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.config__titulo{
+  font-size: 3.5rem;
+  margin: 2rem 0;
+  align-self: flex-start;
+}
+
+
+.config__botones{
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+}
+
+.config__boton{
+  width: 16%;
+  height: 5rem;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+  box-shadow: inset 5px 7px 5px #0004;
+  font-size: 1.5rem;
+  font-family: inherit;
+  font-weight: 600;
+}
+
+#config__boton--facil{
+  background-color: var(--rosa-1);
+}
+
+#config__boton--normal{
+  background-color: var(--rosa-2);
+}
+
+#config__boton--dificil{
+  background-color: var(--violeta2);
+}
+#config__boton--random{
+  background-color: var(--violeta);
+}
+
+.config__botones-timer{
+  display: flex;
+
+}
+
+.config__boton-timer{
+  width: 8%;
+  height: 5rem;
+  border: none;
+  cursor: pointer;
+  box-shadow: inset 0 7px 5px #0004;
+  font-size: 1.5rem;
+  font-family: inherit;
+  font-weight: 600;
+}
+
+#config__boton-timer-on{
+  background-color: var(--rosa-2);
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+
+}
+
+#config__boton-timer-off{
+  background-color: var(--violeta2);
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+#config__boton-timer-on:disabled{
+  filter: opacity(.7);
+}
+
+#config__boton-timer-off:disabled{
+  filter: opacity(.7);
 }
