hacer paginas de juego

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     </head>
     <body class="layout">
         <audio autoplay loop>
-        <source src="~/img/tetris.mp3" type="audio/mp3">
+        <source src="~/img/tiktokSong.mp3" type="audio/mp3">
         </audio>
         <aside class="aside">
             <a href='@Url.Action("Index")'><img src="~/img/LogoAxel.png" class="aside__logo"></a>
