--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,14 +20,21 @@
             <img src="~/img/LogoAxel.png" alt="Axel Up" class="inicio__logo animate__heartBeat animate__repeat-2">
 
             <div class="inicio__botones">
-                    <a href='@Url.Action("")'><button class="inicio__comenzar">COMENZAR</button></a>
+                    <button class="inicio__comenzar" id="boton__comenzar">COMENZAR</button>
                 <a href='@Url.Action("")'><button class="inicio__puntaje">PUNTAJES</button></a>
             </div>
         </div>
+
+        <div class="popup hidden" id="popup">
+            <label for="nombre" class="popup__titulo">Ingresar Nombre</label>
+            <input type="text" name="nombre" class="popup__input"/>
+            <a href='@Url.Action("juego")'><button class="popup__boton">Iniciar</button></a>
+        </div>
+                <script src="~/js/inicio.js" asp-append-version="true"></script>
         @* @await RenderSectionAsync("Scripts", required: false) *@
     </body>
         <a href='@Url.Action("Configuracion")'><i class="fa-solid fa-gear configuracion"></i></a>
-        <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/inicio.js" asp-append-version="true"></script>
 </html>
 
 
