--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -19,6 +19,10 @@ html {
   font-size: 62.5%;
 }
 
+a{
+  color: inherit;
+  text-decoration: none;
+}
 
 *{
   margin: 0;
@@ -200,6 +204,22 @@ button{
   justify-content: space-around;
   width: 80%;
 }
+.respuestas{
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+}
+.boton__respuesta{
+  width: 100%;
+  height: 8rem;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+  box-shadow: inset 5px 7px 5px #0004;
+  font-size: 2.5rem;
+  font-family: inherit;
+  font-weight: 600;
+}
 
 .config__boton{
   width: 16%;
@@ -212,16 +232,24 @@ button{
   font-family: inherit;
   font-weight: 600;
 }
+.config__boton:hover{
+  font-size: 1.8rem;
+}
 
-#config__boton--facil{
+#config__boton--seleccionado{
+  background-color: black;
+  color:#FFC8DD;
+}
+
+#config__boton--Facil{
   background-color: var(--rosa-1);
 }
 
-#config__boton--normal{
+#config__boton--Normal{
   background-color: var(--rosa-2);
 }
 
-#config__boton--dificil{
+#config__boton--Dificil{
   background-color: var(--violeta2);
 }
 #config__boton--random{
