--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         </audio>
         <aside class="aside">
             <a href='@Url.Action("Index")'><img src="~/img/LogoAxel.png" class="aside__logo"></a>
-            <div class="puntaje">15</div>
+            <div class="puntaje">@Juego.puntajeActual</div>
             
         </aside>
 
