--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 
             <div class="inicio__botones">
                     <button class="inicio__comenzar" id="boton__comenzar">COMENZAR</button>
-                <a href='@Url.Action("")'><button class="inicio__puntaje">PUNTAJES</button></a>
+                <a href='@Url.Action("Puntajes")'><button class="inicio__puntaje">PUNTAJES</button></a>
             </div>
         </div>
 
