--- a/Views/Home/Fin.cshtml
+++ b/Views/Home/Fin.cshtml
@@ -1,5 +1,5 @@
 <div class="Fin">
 <h1>Fin del juego!</h1>
 <a href='@Url.Action("Index")'><button class="Fin__inicio">INICIO</button></a>
-<a href='@Url.Action("")'><button class="inicio__puntaje">PUNTAJES</button></a>
+<a href='@Url.Action("Puntajes, new {}")'><button class="inicio__puntaje">PUNTAJES</button></a>
 </div>
