--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,9 +26,11 @@
         </div>
 
         <div class="popup hidden" id="popup">
+        <form action='@Url.Action("Comenzar")'>
             <label for="nombre" class="popup__titulo">Ingresar Nombre</label>
             <input type="text" name="nombre" placeholder="nombre" class="popup__input" />
-            <a href='@Url.Action("Comenzar")'><button class="popup__boton">Iniciar</button></a>
+            <button type="submit" class="popup__boton">Iniciar</button>
+            </form>
         </div>
                 <script src="~/js/inicio.js" asp-append-version="true"></script>
         @* @await RenderSectionAsync("Scripts", required: false) *@
