--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -204,25 +204,14 @@ button{
   justify-content: space-around;
   width: 80%;
 }
-.respuestas{
-  display: flex;
-  justify-content: space-around;
-  width: 80%;
-}
-.boton__respuesta{
-  width: 100%;
-  height: 8rem;
-  border-radius: 15px;
-  border: none;
-  cursor: pointer;
-  box-shadow: inset 5px 7px 5px #0004;
-  font-size: 2.5rem;
-  font-family: inherit;
-  font-weight: 600;
+
+
+.config__botones a{
+  width: 16%;
 }
 
 .config__boton{
-  width: 16%;
+  width: 100%;
   height: 5rem;
   border-radius: 15px;
   border: none;
@@ -232,43 +221,40 @@ button{
   font-family: inherit;
   font-weight: 600;
 }
-.config__boton:hover{
-  font-size: 1.8rem;
-}
 
 #config__boton--seleccionado{
-  background-color: black;
-  color:#FFC8DD;
+  transform: scale(1.12);
+  filter: contrast(.6);
 }
 
-#config__boton--Facil{
+.config__boton--Facil{
   background-color: var(--rosa-1);
 }
 
-#config__boton--Normal{
+.config__boton--Normal{
   background-color: var(--rosa-2);
 }
 
-#config__boton--Dificil{
+.config__boton--Dificil{
   background-color: var(--violeta2);
 }
-#config__boton--random{
+.config__boton--random{
   background-color: var(--violeta);
 }
 
-#config__boton--Animales{
+.config__boton--Animales{
   background-color: var(--rosa-1);
 }
 
-#config__boton--Cine{
+.config__boton--Cine{
   background-color: var(--rosa-2);
 }
 
-#config__boton--Deportes{
+.config__boton--Deportes{
   background-color: var(--violeta2);
 }
 
-#config__boton--Random{
+.config__boton--Random{
   background-color: var(--violeta);
 }
 
@@ -310,24 +296,35 @@ button{
 }
 
 .popup{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  background-color: var(--rosa3);
-  width: 40%;
+ 
+  background-color: #000d;
+  width: 30%;
   height: 30rem;
   text-align: center;
   position: absolute;
   top: 30%;
-  left: 30%;
+  left: 35%;
   align-items: center;
   border-radius: 15px;
   box-shadow: 10px 15px 5px #0003;
-
 }
+
+.popup form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .popup__titulo{
   font-size: 1.8rem;
   margin-top: 1rem;
+  -webkit-text-stroke: .2px var(--rosa-2);
+  --webkit-text-fil: var(--negro);
+  font-weight: 600;
+
 }
 .popup__input{
   display: flex;
@@ -335,14 +332,22 @@ button{
   outline: none;
   padding: 1.5rem;
   font-size: 1.2rem;
-  background-color: var(--rosa-1);
-  border: 1px solid var(--violeta);
+  background-color: var(--violeta2);
+  border: 1px solid var(--negro);
+  border-radius: 8px;
+  font-family: inherit;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  color: var(--negro);
+  font-weight: 600;
+
 }
 
 .popup__boton{
   border-radius: 5%;
   background-color: var(--violeta2);
-  height: 10rem;
+  height: 6rem;
   border: none;
   cursor: pointer;
   padding: 1rem 5rem;
@@ -431,4 +436,64 @@ button{
 
 .amarillo{
   color: var(--amarillo);
+}
+
+.pregunta{
+  padding:2.5% 3.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.pregunta__titulo{
+  font-size: 2.2rem;
+  font-weight: 500;
+}
+
+.pregunta__respuestas{
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 3rem;
+}
+
+.pregunta__respuestas a{
+  width: 50%;
+  margin: auto;
+}
+
+.pregunta__boton{
+  width: 100%;
+  height: 9rem;
+  border: none;
+  cursor: pointer;
+  box-shadow: inset 5px 7px 5px #0004;
+  font-size: 2.5rem;
+  font-family: inherit;
+  font-weight: 600;
+  filter: brightness(.9);
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: 3px;
+}
+
+#pregunta__boton--0{
+  background-color: var(--rosa-1);
+  border-top-left-radius: 15px;
+}
+
+#pregunta__boton--1{
+  background-color: var(--rosa-2);
+  border-top-right-radius: 15px;
+}
+
+#pregunta__boton--2{
+  background-color: var(--violeta2);
+  border-bottom-left-radius: 15px;
+
+}
+
+#pregunta__boton--3{
+  background-color: var(--violeta);
+  border-bottom-right-radius: 15px;
 }
