--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -30,6 +30,11 @@
             <label for="nombre" class="popup__titulo">Ingresar Nombre</label>
             <input type="text" name="nombre" placeholder="nombre" class="popup__input" />
             <button type="submit" class="popup__boton">Iniciar</button>
+            @if(@ViewBag.Categoria != ""){
+
+            <h6 class="popup__subtitulo"> Vas a jugar @ViewBag.Categoria en @ViewBag.Dificultad</h6>
+            }
+            
             </form>
         </div>
                 <script src="~/js/inicio.js" asp-append-version="true"></script>
