--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -15,6 +15,10 @@
 
 }
 
+button{
+  cursor: pointer;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -76,6 +80,17 @@ button{
   font-size: 2.5rem;
   box-shadow: var(--shadow-botones);
   border-radius: 10px;
+  width: 100%;
+}
+
+.puntaje__titulo{
+  color: var(--rosa3);
+  font-size: 1.6rem;
+  margin-bottom: 2rem;
+}
+
+.puntaje__wrapper{
+  width: 65%;
 }
 
 .volumen{
@@ -225,6 +240,7 @@ button{
 #config__boton--seleccionado{
   transform: scale(1.12);
   filter: contrast(.6);
+  border: 3px solid var(--verde);
 }
 
 .config__boton--Facil{
@@ -359,6 +375,11 @@ button{
 
 .popup__boton:hover{
   filter: brightness(1.1);
+}
+
+.popup__subtitulo{
+  color: var(--rosa3);
+  font-size: 1.7rem;
 }
 
 .hidden{
